# calculator

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c
inc/: display.h  sysUtils.h
lib-st7735/: CMakeLists.txt
lib-st7735/include/: ST7735_TFT.h  TextFonts.h  hw.h
lib-st7735/src/: ST7735_TFT.c  hw.c
src/: display.c  sysUtils.c
